--- a/FrontEnd/src/app/core/components/header/header.component.html
+++ b/FrontEnd/src/app/core/components/header/header.component.html
@@ -5,40 +5,40 @@
 <!--<app-search-bar></app-search-bar>-->
 <header class="header" id="header">
   <nav class="nav container">
-    <a href="#" class="nav__logo">Marlon</a>
+    <a routerLink="" class="nav__logo">Marlon</a>
 
     <div class="nav__menu" id="nav-menu">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="#home" class="nav__link active-link">
+          <a routerLink="#home" class="nav__link active-link">
             <i class='bx bx-home-alt nav__icon'></i>
             <span class="nav__name">Home</span>
           </a>
         </li>
 
         <li class="nav__item">
-          <a href="#about" class="nav__link">
+          <a routerLink="#about" class="nav__link">
             <i class='bx bx-user nav__icon'></i>
             <span class="nav__name">About</span>
           </a>
         </li>
 
         <li class="nav__item">
-          <a href="#skills" class="nav__link">
+          <a routerLink="#skills" class="nav__link">
             <i class='bx bx-book-alt nav__icon'></i>
             <span class="nav__name">Skills</span>
           </a>
         </li>
 
         <li class="nav__item">
-          <a href="#portfolio" class="nav__link">
+          <a routerLink="#portfolio" class="nav__link">
             <i class='bx bx-briefcase-alt nav__icon'></i>
             <span class="nav__name">Portfolio</span>
           </a>
         </li>
 
         <li class="nav__item">
-          <a href="#contactme" class="nav__link">
+          <a routerLink="" class="nav__link">
             <i class='bx bx-message-square-detail nav__icon'></i>
             <span class="nav__name">Contactme</span>
           </a>
