--- a/FrontEnd/src/app/core/components/header/header.component.scss
+++ b/FrontEnd/src/app/core/components/header/header.component.scss
@@ -1,17 +1,18 @@
+@use './../../../../scss/utilities/_variables.scss' as *;
 /*=============== HEADER ===============*/
 .header{
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--container-color);
-  z-index: var(--z-fixed);
+  background-color: $container-color;
+  z-index: $z-fixed;
   transition: .4s;
 }
 
 /*=============== NAV ===============*/
 .nav{
-  height: var(--header-height);
+  height: $header-height;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,7 +22,8 @@
     border-radius: 50%;
   }
   &__logo{
-    color: var(--title-color);
+    //color: var($title-color);
+    color: $couleur-principale;
     font-weight: 600;
   }
 
@@ -30,8 +32,8 @@
       position: fixed;
       bottom: 0;
       left: 0;
-      background-color: var(--container-color);
-      box-shadow: 0 -1px 12px hsla(var(--hue), var(--sat), 15%, 0.15);
+      background-color: $container-color;
+      box-shadow: 0 -1px 12px hsla($hue, $sat, 15%, 0.15);
       width: 100%;
       height: 4rem;
       padding: 0 1rem;
@@ -51,7 +53,7 @@
     flex-direction: column;
     align-items: center;
     row-gap: 4px;
-    color: var(--title-color);
+    color: $title-color;
     font-weight: 600;
   }
 
@@ -59,7 +61,7 @@
     justify-content: space-around;
   }
   &__name{
-    font-size: var(--tiny-font-size);
+    font-size: $tiny-font-size;
     // display: none; // Minimalist design, hidden labels
   }
   &__icon{
@@ -70,7 +72,7 @@
 /*Active link*/
 .active-link{
   position: relative;
-  color: var(--first-color);
+  color: $first-color;
   transition: .3s;
 
   // Minimalist design, active link
@@ -80,12 +82,12 @@
   //     bottom: -.5rem;
   //     width: 4px;
   //     height: 4px;
-  //     background-color: var(--first-color);
+  //     background-color: var($first-color);
   //     border-radius: 50%;
   // }
 }
 
 /* Change background header */
 .scroll-header{
-  box-shadow: 0 1px 12px hsla(var(--hue), var(--sat), 15%, 0.15);
+  box-shadow: 0 1px 12px hsla($hue, $sat, 15%, 0.15);
 }
