--- a/FrontEnd/src/app/pages/home/home.component.html
+++ b/FrontEnd/src/app/pages/home/home.component.html
@@ -1,11 +1,7 @@
-<div>
-  <h1 class="text-center">Bienvenue <span class="prenom">Steve</span></h1>
+<div class="container-home">
+  <h1 *ngIf="!bool" class="wel">Bienvenue <span class="prenom">Steve</span></h1>
   <ul>
     <li routerLink="login"  routerLinkActive="active">CONNEXION</li>
-    <li routerLinkActive="register" routerLink="">INSCRIPTION</li>
+    <li routerLink="" routerLinkActive="register">INSCRIPTION</li>
   </ul>
-<!--  <mat-tab-group >-->
-<!--    <mat-tab label="CONNEXION" routerLink="login"></mat-tab>-->
-<!--    <mat-tab label="INSCRIPTION"> Content 2 </mat-tab>-->
-<!--  </mat-tab-group>-->
 </div>
