--- a/FrontEnd/src/app/pages/home/home.component.scss
+++ b/FrontEnd/src/app/pages/home/home.component.scss
@@ -1,10 +1,15 @@
+@use './../../../scss/utilities/_variables.scss' as *;
 @import url('https://fonts.googleapis.com/css?family=Coustard:900&display=swap');
 
-div{
+.container-home{
   position: relative;
   width: 100%;
   height: 100%;
+  margin: 2rem 0.5rem;
   //background-color: grey;
+}
+.wel{
+  text-align: center;
 }
 .prenom {
   background-image: linear-gradient(to right,#DB1F5F 0%, #8b5fb6 25%,#0367FC 75%,#9016D7 100%);
@@ -12,7 +17,7 @@ div{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bold;
-font-family: "Coustard";
+  font-family: "Coustard";
   text-transform: capitalize;
 }
 .mat-tab-label{
@@ -45,7 +50,7 @@ ul {
      }
   }
   .active{
-    color: #8b5fb6;
+    color: $couleur-principale;
   }
 
 }
