page history start

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <app-header *ngIf="!title"></app-header>
-  <app-home *ngIf="title"></app-home>
+<!--  <app-home *ngIf="title"></app-home>-->
   <main>
       <router-outlet></router-outlet>
   </main>
