--- a/FrontEnd/src/app/pages/home/home.component.scss
+++ b/FrontEnd/src/app/pages/home/home.component.scss
@@ -1,56 +1,58 @@
 @use './../../../scss/utilities/_variables.scss' as *;
 @import url('https://fonts.googleapis.com/css?family=Coustard:900&display=swap');
 
-.container-home{
-  position: relative;
+.container-home {
   width: 100%;
-  height: 100%;
-  margin: 2rem 0.5rem;
-  //background-color: grey;
-}
-.wel{
-  text-align: center;
-}
-.prenom {
-  background-image: linear-gradient(to right,#DB1F5F 0%, #8b5fb6 25%,#0367FC 75%,#9016D7 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: bold;
-  font-family: "Coustard";
-  text-transform: capitalize;
-}
-.mat-tab-label{
-  color: red;
-}
-.mat-tab-group.mat-background-primary > .mat-tab-header .mat-tab-label{
-  color: blue;
-}
-.mat-tab-group{
-  margin: auto;
-  width: 50%;
-}
-.mat-tab-labels {
-  display: flex;
-  justify-content: space-around;
-}
-ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  //background-color: #8b5fb6;
-  margin: 0 auto;
-  li{
-    list-style-type: none;
-     &:first-child{
-       margin-right: 2rem;
-       padding-bottom: 2px;
-       border-bottom: 1px solid black;
+  height: 100vh;
 
-     }
-  }
-  .active{
-    color: $couleur-principale;
+  .home-header {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    //background-color: darkblue;
+    .home-avatar {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      position: absolute;
+      right: 5px;
+      top: 5px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+      }
+    }
   }
 
+  .home-content {
+    padding: 0 5%;
+    //background-color: darkgreen;
+    margin: 0 auto;
+
+    .sectionTitle {
+      padding: 2rem 0;
+      //margin-top: 2rem;
+      font-family: 'Roboto', monospace;
+      font-weight: 500;
+      text-align: center;
+    }
+    mat-card {
+      padding: 1rem 0.5rem;
+      margin: 1rem 0;
+      .card-type {
+        display: flex;
+        background-color: darkgoldenrod;
+        margin: 0 auto;
+        width: 50%;
+        text-align: center;
+        align-items: flex-end;
+        justify-content: center;
+      }
+    }
+  }
+
+
 }
+
