auth jwt verify ok

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="container-fluid">
-  <app-header *ngIf="!title"></app-header>
-<!--  <app-home *ngIf="title"></app-home>-->
+  <app-header *ngIf="title"></app-header>
   <main>
       <router-outlet></router-outlet>
   </main>
