--- a/FrontEnd/src/app/core/components/header/header.component.html
+++ b/FrontEnd/src/app/core/components/header/header.component.html
@@ -46,6 +46,6 @@
       </ul>
     </div>
 
-    <img src="./assets/perfil.png" alt="" class="nav__img">
+<!--    <img src="./assets/perfil.png" alt="" class="nav__img">-->
   </nav>
 </header>
