--- a/FrontEnd/src/app/pages/home/home.component.scss
+++ b/FrontEnd/src/app/pages/home/home.component.scss
@@ -3,20 +3,24 @@
 
 .container-home {
   width: 100%;
-  height: 100vh;
-
+  position: relative;
+  z-index: 101;
   .home-header {
     position: relative;
     width: 100%;
     height: 50px;
     //background-color: darkblue;
     .home-avatar {
-      width: 40px;
-      height: 40px;
+      width: 30px;
+      height: 30px;
       object-fit: cover;
       position: absolute;
-      right: 5px;
-      top: 5px;
+      right: 13px;
+      top: 8px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       img {
         width: 100%;
@@ -28,31 +32,78 @@
 
   .home-content {
     padding: 0 5%;
-    //background-color: darkgreen;
     margin: 0 auto;
 
     .sectionTitle {
       padding: 2rem 0;
-      //margin-top: 2rem;
       font-family: 'Roboto', monospace;
       font-weight: 500;
       text-align: center;
     }
+
     mat-card {
-      padding: 1rem 0.5rem;
+      padding: 0 0.5rem 1rem 0.5rem;
       margin: 1rem 0;
-      .card-type {
-        display: flex;
-        background-color: darkgoldenrod;
-        margin: 0 auto;
-        width: 50%;
+      //border: #7451eb solid 1px;
+      position: relative;
+
+      .card-name {
         text-align: center;
+        padding: 25px 0 10px 0;
+        font-weight: 600;
+      }
+
+      .card-type {
+        position: absolute;
+        font-size: 10px;
+        top: 5px;
+        right: 7px;
+        display: flex;
+        margin: 0 auto;
         align-items: flex-end;
         justify-content: center;
+        background-color: #dfc8f7;
+        border-radius: 50%;
+        padding: 5px;
+
+        mat-icon {
+          font-size: 15px;
+          position: absolute;
+          top: 5px;
+          right: 8px;
+          //color: rgb(0, 0, 0);
+
+        }
+
+        .type {
+          //padding-top: 8px;
+          //background-color: rgba(1, 115, 184, 0.08);
+          //color: rgb(0, 0, 0);
+        }
+      }
+
+      .card-date, .card-expertise {
+        text-align: center;
+        padding-bottom: 10px;
+
+        span:first-child {
+          padding-right: 5px;
+        }
       }
     }
+  }
+
+  .mat-mdc-paginator-container {
+    display: flex;
+    justify-content: center !important;
+    align-items: center;
   }
 
 
 }
 
+#cdk-overlay-0 {
+  position: absolute !important;
+  //top: 53px;
+  right: 12px;
+}
